@@ -1,25 +1,33 @@
-//package com.photoalbum.controller;
+package com.photoalbum.controller;
 
-//import com.photoalbum.service.PhotoService;
-//import org.springframework.stereotype.Controller;
-//import org.springframework.ui.Model;
-//import org.springframework.web.bind.annotation.GetMapping;
-//import org.springframework.web.bind.annotation.RequestParam;
+import com.photoalbum.service.PhotoService;
+import com.photoalbum.service.TagService;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 
-//@Controller
-//public class SearchController {
+@Controller
+public class SearchController {
 
-    //private final PhotoService photoService;
+    @Autowired
+    private PhotoService photoService;
+    
+    @Autowired
+    private TagService tagService;
 
-    //public SearchController(PhotoService photoService) {
-        //this.photoService = photoService;
-    //}
-
-    //@GetMapping("/search")
-    //public String search(@RequestParam(required = false) String q, Model model) {
-        //if (q != null && !q.isBlank()) {
-            //model.addAttribute("photos", photoService.search(q));
-        //}
-        //return "search";
-    //}
-//}
+    @GetMapping("/search")
+    public String search(
+            @RequestParam(value = "tag", required = false) String tag,
+            Model model) {
+        
+        if (tag != null && !tag.trim().isEmpty()) {
+            model.addAttribute("photos", photoService.searchPhotosByTag(tag.trim()));
+            model.addAttribute("currentTag", tag);
+        }
+        
+        model.addAttribute("popularTags", tagService.getPopularTags());
+        return "search";
+    }
+}
